--- a/CODE/bum/src/main/resources/templates/Home.html
+++ b/CODE/bum/src/main/resources/templates/Home.html
@@ -182,7 +182,7 @@
                         headers[csrfHeader] = csrfToken;
                     }
 
-                    const response = await fetch('/api/v1/orders/checkout?packageId=' + packageId, {
+                    const response = await fetch('/orders/checkout?packageId=' + packageId, {
                         method: 'POST',
                         headers: headers
                     });
