--- a/CODE/bum/src/main/resources/templates/user-dashboard.html
+++ b/CODE/bum/src/main/resources/templates/user-dashboard.html
@@ -2,8 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
 <head>
     <title>User Dashboard</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css"/>
 </head>
 <body>
+<div th:replace="~{layout :: header}"></div>
 <div layout:fragment="content">
     <div class="container mt-4">
         <h1>User Dashboard</h1>
@@ -31,5 +33,6 @@
         </div>
     </div>
 </div>
+<div th:replace="~{layout :: footer}"></div>
 </body>
 </html>
