Implement Developer Product Management: Add manageDeveloperProducts method, enhance product upgrade and deletion functionalities, and create developer-manage-products.html template.

--- a/CODE/bum/src/main/resources/templates/developer-dashboard.html
+++ b/CODE/bum/src/main/resources/templates/developer-dashboard.html
@@ -313,7 +313,7 @@
                                 <button class="btn btn-outline-primary w-100" data-bs-toggle="modal" data-bs-target="#addProductModal"><i class="fas fa-plus"></i> Đăng sản phẩm</button>
                             </div>
                             <div class="col-6">
-                                <a class="btn btn-outline-secondary w-100" th:href="@{/dashboard/developer/products}"><i class="fas fa-pen"></i> Quản lý sản phẩm</a>
+                                <a class="btn btn-outline-primary w-100" th:href="@{/product/developer/manage}"><i class="fas fa-pen"></i> Quản lý sản phẩm</a>
                             </div>
                             <div class="col-6">
                                 <a class="btn btn-outline-success w-100" th:href="@{/dashboard/developer/payouts}"><i class="fas fa-money-check"></i> Yêu cầu rút tiền</a>
