--- a/CODE/bum/src/main/resources/templates/developer-dashboard.html
+++ b/CODE/bum/src/main/resources/templates/developer-dashboard.html
@@ -371,7 +371,7 @@
             <div class="col-lg-8">
                 <div class="card h-100">
                     <div class="card-header d-flex justify-content-between align-items-center">
-                        <span><i class="fas fa-boxes"></i> Sản phẩm nổi bật </span>
+                        <span><i class="fas fa-boxes"></i> Sản phẩm gần đây </span>
                         <a class="btn btn-sm btn-light" th:href="@{/dashboard/developer/products}"><i class="fas fa-box-open"></i> Tất cả</a>
                     </div>
                     <div class="card-body p-0">
@@ -381,7 +381,7 @@
                                     <tr>
                                         <th>Tên</th>
                                         <th>Trạng thái</th>
-                                        <th>Doanh thu</th>
+                                        <th>Lượt bán</th>
                                         <th>Cập nhật</th>
                                         <th class="text-end">Thao tác</th>
                                     </tr>
